Add edit and delete functionalities to the applications list

--- a/app/styles/variables.css
+++ b/app/styles/variables.css
@@ -2,6 +2,7 @@
   /*Color palette*/
   --color-primary: #22c55e;
   --color-secondry: #00acc1;
+  --color-secondry-dark: #0097a7;
   --color-primary-light: #86efac;
   --color-primary-dark: #15803d;
   --color-background: #f9fafb;
