--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,7 @@
 @theme inline {
   --color-primary: var(--color-primary);
   --color-secondry: var(--color-secondry);
+  --color-secondry-dark: var(--color-secondry-dark);
   --color-primary-light: var(--color-primary-light);
   --color-primary-dark: var(--color-primary-dark);
   --color-background: var(--color-background);
@@ -47,7 +48,6 @@ h6 {
 }
 
 button {
-  background-color: var(--color-primary);
   color: #fff;
   border: none;
   border-radius: 0.5rem;
@@ -57,8 +57,15 @@ button {
 }
 
 button:hover {
-  background-color: var(--color-primary-dark);
   cursor: pointer;
+}
+
+button.submit {
+  background-color: var(--color-primary);
+}
+
+button.submit:hover {
+  background-color: var(--color-primary-dark);
 }
 
 input,
