--- a/app/globals.css
+++ b/app/globals.css
@@ -61,16 +61,18 @@ button:hover {
   cursor: pointer;
 }
 
+button.toggle-filter {
+  color: var(--color-primary);
+  border: 1px solid var(--color-primary);
+}
+
 input,
 textarea,
 select {
-  /* border: 1px solid var(--color-border-divider); */
   border-radius: 0.375rem;
   padding: 0.5rem;
   color: var(--color-text-primary);
-  background-color: var(--color-surface);
   font-family: var(--font-secondary);
-  border: 1px solid transparent;
 }
 
 input:focus,
