--- a/app/styles/variables.css
+++ b/app/styles/variables.css
@@ -3,6 +3,7 @@
   --color-primary: #22c55e;
   --color-secondry: #00acc1;
   --color-secondry-dark: #0097a7;
+  --color-secondry-darker: #007c8a;
   --color-primary-light: #86efac;
   --color-primary-dark: #15803d;
   --color-background: #f9fafb;
