--- a/app/globals.css
+++ b/app/globals.css
@@ -97,3 +97,7 @@ select:-webkit-autofill {
   -webkit-text-fill-color: var(--color-text-primary) !important;
   transition: background-color 5000s ease-in-out 0s;
 }
+
+h2.chart-title {
+  color: gray;
+}
