--- a/app/globals.css
+++ b/app/globals.css
@@ -49,7 +49,9 @@ h6 {
   font-weight: 600;
 }
 
-button {
+button,
+.cta,
+.secondry {
   color: #fff;
   /* border: none; */
   border-radius: 0.5rem;
@@ -62,7 +64,16 @@ button:hover {
   cursor: pointer;
 }
 
-button.toggle-filter {
+.cta {
+  background-color: var(--color-primary);
+}
+
+.cta:hover {
+  background-color: var(--color-primary-dark);
+}
+
+button.toggle-filter,
+.secondry {
   color: var(--color-primary);
   border: 1px solid var(--color-primary);
 }
